2005-03-14  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/totem-mozilla-viewer.c: (main):
	  Init backend.

2005-03-14  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (button_release_cb), (drag_end_cb),
	(init_treeview):
	* src/totem.c: (totem_callback_connect), (video_widget_create):
	also handle MOVE actions on a drop, as Konqueror doesn't handle
	COPIES (Closes: #170109)

2005-03-14  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (totem_playlist_add_one_mrl): use
	gtk_list_store_insert_with_values instead of separate
	gtk_list_store_insert() and gtk_list_store_set

2005-03-14  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_class_init):
	  Fix compile.

2005-03-14  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am:
	* data/totem-video-thumbnailer.1:
	* data/totem-video-thumbnailer.pod: add a man page for
	totem-video-thumbnailer, from Zack Cerza <zcerza@coe.neu.edu>
	The man page is generated off-line, and the copy stored in CVS, to
	avoid needing pod2man at compile-time

2005-03-14  Bastien Nocera  <hadess@hadess.net>

	* src/totem-mozilla-plugin.c: (totem_plugin_write_ready): we don't
	need any more data when we've closed the stdin

2005-03-14  Bastien Nocera  <hadess@hadess.net>

	* src/totem-mozilla-plugin.c: (totem_plugin_new_instance),
	(totem_plugin_destroy_instance), (totem_plugin_destroy_stream),
	(totem_plugin_write), (NP_GetMIMEDescription):
	Add support for MPEG, close the file descriptor when we're asked to
	* src/totem-mozilla-viewer.c: (main): wait until we're fully shown
	before we start consuming the data off the standard input

2005-03-14  Bastien Nocera  <hadess@hadess.net>

	* src/totem-mozilla-plugin.c: (totem_plugin_fork),
	(totem_plugin_new_instance): pass the src as the url to the
	viewer, data still doesn't seem to get through when embedded into
	Mozilla

2005-03-13  Bastien Nocera  <hadess@hadess.net>
