@@ -1,3 +1,9 @@
+2005-03-14  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem-pl-parser.c: (totem_pl_parser_add_asf): fix parsing of
+	ASX files when the root wasn't at the start of the file
+	(Closes: #170342)
+
 2005-03-14  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* src/totem-mozilla-viewer.c: (main):
